--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Günther Jena">
   <meta name="description" content="{% block description %}Blog von Günther Jena (vormals Jehle){% endblock %}">
   <meta name="google-site-verification" content="O-3LVEziPiVrCYqFCwbLmB3s7lNG__cPMLLAr_RUxbA" />
-  <link rel="stylesheet" href="{{ root_path }}/theme/css/bulma.min.css">
+  <link rel="stylesheet" href="{{ root_path }}/theme/css/semiversus.css">
   <link rel="icon" href="{{ root_path }}/favicon.ico">
   {% block header %}{% endblock %}
 </head>
@@ -41,9 +41,9 @@
 
   <section class="hero">
     <div class="hero-body">
-      <div class="container">
+      <div class="container is-max-desktop">
         <div class="columns">
-          <div class="column is-6">
+          <div class="column">
             <div class="content">
             {{ page.content }}
             </div>
