--- a/content/theme/css/semiversus.sass/semiversus.sass
+++ b/content/theme/css/semiversus.sass/semiversus.sass
@@ -1,5 +1,14 @@
 @charset "utf-8"
 /*! bulma.io v0.9.4 | MIT License | github.com/jgthms/bulma */
+
+$body-size: 14px;
+$desktop: 769px;
+$footer-padding: 0.5rem 1.5rem 0.5rem;
+
+.content
+    h1
+        border-bottom: 1px solid #aaa
+
 @import "utilities/_all"
 @import "base/_all"
 @import "elements/_all"
