--- a/templates/page.html
+++ b/templates/page.html
@@ -1,22 +1,10 @@
 {% extends "base.html" %}
 {% block title %}{{ page.title }}{% endblock %}
-{% block description %}{{ page.summary|striptags }}{% endblock %}
-{% block header %}
-  {% for translation in page.translations %}<link rel="alternate" hreflang="{{ translation.lang }}" href="{{ root_path }}/{{translation.url }}" />{% endfor %}
-{% endblock %}
-{% block javascript %}{% if page.latex %}{{ page.latex }}{% endif %}{% endblock %}
-
 {% block head %}
-    <div class="visible-print-block">Semiversus | {{ page.title }}</div>
-    {% if page.parent %}<ol class="breadcrumb hidden-print">{% for p in page.parent_list[::-1] %}<li><a href="{{ root_path }}/{{p.url}}">{{p.title}}</a></li>{% endfor %}<li><strong>{{ page.title }}</strong></li></ol>{% endif %}
-    {% if page.next or page.prev %}<nav class="hidden-print"><ul class="pager">
-      {% if page.prev%}<li class="previous"><a href="{{ root_path }}/{{page.prev.url}}">&larr; {{ page.prev.title }}</a></li>{% endif %}
-      {% if page.next%}<li class="next"><a href="{{ root_path }}/{{page.next.url}}">{{ page.next.title }} &rarr;</a></li>{% endif %}</ul></nav>
-    {% endif %}
+  {% if page.parent %}<nav class="breadcrumb"><ul>{% for p in page.parent_list[:-1] %}<li><a href="{{ root_path }}/{{p.url}}">{{p.title}}</a></li>{% endfor %}<li class="is-active"><a href="#">{{ page.title }}</a></li></ul></nav>{% endif %}
 {% endblock %}
 
 {% block content %}
-  <header><h1>{{ page.title }}<div class="pull-right hidden-print">{% for translation in page.translations %}<a href="{{ root_path }}/{{ translation.url }}" class="btn btn-primary btn-xs">{{ translation.lang.replace('en', 'English').replace('de', 'Deutsch') }}</a>{% endfor %}<a href="{{ root_path }}/{{ page.path }}"  class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="bottom" title="Quelltext zu dieser Seite">Quelltext</a></div></h1></header>
   {{ page.content }}
 {% endblock %}
 
