--- a/content/theme/css/semiversus.sass/semiversus.sass
+++ b/content/theme/css/semiversus.sass/semiversus.sass
@@ -9,6 +9,8 @@ $footer-padding: 0.5rem 1.5rem 0.5rem;
     h1
         border-bottom: 1px solid #aaa
 
+@import "icons"
+
 @import "utilities/_all"
 @import "base/_all"
 @import "elements/_all"
