--- a/templates/base.html
+++ b/templates/base.html
@@ -34,10 +34,11 @@
 
   <section class="hero is-info is-small">
     <div class="hero-body">
-      <div class="container"><h1 class="title">{{ page.title }}</h1></div>
+      <div class="container is-max-desktop"><h1 class="title">{{ page.title }}</h1></div>
     </div>
   </section>
-  <section class="hero">
+
+  <section class="hero is-small">
     <div class="hero-body">
       <div class="container is-max-desktop">
         <div class="columns">
