add latex support

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="{{ root_path }}/favicon.ico">
   {% block header %}{% endblock %}
 </head>
-<body style="display:flex; min-height:100vh; flex-direction:column;">
+<body>
   <nav class="navbar is-info">
     <div class="container">
       <div class="navbar-brand">
