--- a/templates/page.html
+++ b/templates/page.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
+
 {% block title %}{{ page.title }}{% endblock %}
+
+{% block header %}
+  {% if page.latex %}<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>{% endif %}
+{% endblock %}
+
 {% block head %}
   {% if page.parent %}<nav class="breadcrumb mb-2"><ul><li><a href="{{ root_path }}/index.html"><span class="icon"><i class="icon-home"></i></span></a></li>{% for p in page.parent %}<li><a href="{{ root_path }}/{{p.url}}">{{p.title}}</a></li>{% endfor %}<li class="is-active has-text-weight-medium"><a href="#">{{ page.title }}</a></li></ul></nav>{% endif %}
   {% if page.next or page.prev %}<nav class="level">
