add anchor to headings

--- a/content/theme/css/semiversus.sass/semiversus.sass
+++ b/content/theme/css/semiversus.sass/semiversus.sass
@@ -31,3 +31,6 @@ $border: $grey-dark
         background: $grey-lighter
     td
         min-width: 50px
+    h1, h2, h3, h4, h5, h6
+        a
+            color: $content-heading-color
