--- a/content/theme/css/semiversus.sass/icons.css
+++ b/content/theme/css/semiversus.sass/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?tdkw2f');
-  src:  url('../fonts/icomoon.eot?tdkw2f#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?tdkw2f') format('truetype'),
-    url('../fonts/icomoon.woff?tdkw2f') format('woff'),
-    url('../fonts/icomoon.svg?tdkw2f#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?1honk');
+  src:  url('../fonts/icomoon.eot?1honk#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?1honk') format('truetype'),
+    url('../fonts/icomoon.woff?1honk') format('woff'),
+    url('../fonts/icomoon.svg?1honk#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -28,8 +28,26 @@
 .icon-home:before {
   content: "\e900";
 }
+.icon-file-text2:before {
+  content: "\e926";
+}
+.icon-paste:before {
+  content: "\e92d";
+}
+.icon-price-tag:before {
+  content: "\e935";
+}
 .icon-download2:before {
   content: "\e9c5";
+}
+.icon-link:before {
+  content: "\e9cb";
+}
+.icon-notification:before {
+  content: "\ea08";
+}
+.icon-info:before {
+  content: "\ea0c";
 }
 .icon-circle-right:before {
   content: "\ea42";
