--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         <div class="navbar-end">
           <a class="navbar-item is-size-5 has-text-weight-semibold" href="{{ root_path }}/index.html">Blog</a>
           <a class="navbar-item is-size-5 has-text-weight-semibold" href="{{ root_path }}/dic/uebersicht.html">Unterricht</a>
-          <a class="navbar-item is-size-5 has-text-weight-semibold" href="{{ root_path }}/projekte/projekte.html">Projekte</a>
+          <a class="navbar-item is-size-5 has-text-weight-semibold" href="{{ root_path }}/projekte.html">Projekte</a>
           <a class="navbar-item is-size-5 has-text-weight-semibold" href="{{ root_path }}/about.html">Über mich</a>
         </div>
       </div>
