--- a/content/theme/css/semiversus.sass/semiversus.sass
+++ b/content/theme/css/semiversus.sass/semiversus.sass
@@ -24,6 +24,12 @@ $border: $grey-dark
 .content
     h1
         border-bottom: 1px solid #aaa
+    h2
+        font-size: 1.5em
+    h3
+        font-size: 1.25em
+    h4
+        font-size: 1.125em
     table
         width: auto
     th
