--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
 
   <footer class="footer is-small">
     <div class="content has-text-centered">
-      <p>Günther Jena |
+      <p>Günther Jena 2011 - {{ env['timestamp'].year }} | Letztes Update am {{ env['timestamp'].strftime('%-d.%-m.%Y') }} (Rev. <a href="https://github.com/semiversus/aestatic/tree/{{ env['git_sha'] }}">{{ env['git_sha'][:7] }}</a>)
       </p>
     </div>
   </footer>
