--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
 
   <section class="hero is-info is-small">
     <div class="hero-body">
-      <div class="container is-max-desktop"><h1 class="title">{{ page.title }}</h1></div>
+      <div class="container is-max-desktop"><h1 class="title">{{ page.title }}{% block source_link %}{% endblock %}</h1></div>
     </div>
   </section>
 
