added index for blog articles

--- a/templates/page.html
+++ b/templates/page.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block source_link %}
-<a href="https://github.com/semiversus/aestatic/tree/{{ env['git_sha'] }}/content/{{ page.path }}" class="headerlink" title="Quelldatei"><span class="icon ml-3 is-size-5"><i class="icon-file-text2"></i></span></a>
+<a href="https://github.com/semiversus/aestatic/tree/{{ env['git_sha'] }}/content/{{ page.path }}" class="sourcelink" title="Quelldatei"><span class="icon ml-3 is-size-5"><i class="icon-file-text2"></i></span></a>
 {% endblock %}
 
 {% block head %}
