--- a/content/theme/css/semiversus.sass/semiversus.sass
+++ b/content/theme/css/semiversus.sass/semiversus.sass
@@ -13,6 +13,10 @@ $content-table-foot-cell-border-width: 1px
 $content-table-body-last-row-cell-border-bottom-width: 1px
 $border: $grey-dark
 
+$widescreen-enabled: false
+$fullhd-enabled: false
+$desktop: 760px
+
 @import "base/_all"
 @import "elements/_all"
 @import "form/_all"
