--- a/templates/index_english.html
+++ b/templates/index_english.html
@@ -1,15 +1,15 @@
-{% extends "base.html" %}
+{% extends "base_english.html" %}
 {% block content %}
   {{ page.content }}
 
-  {% for article in env['articles']  if article.language == 'deutsch' %}
+  {% for article in env['articles'] if article.language == 'english' %}
     <div class="box mb-5">
       <p class="title is-4"><a href="{{ root_path }}/{{ article.url }}">{{ article.title }}</a></p>
       <div class="columns">
         <div class="column is-two-thirds">
           <p>{{ article.date.strftime('%-d.%-m.%Y') }}</p>
           {{ article.summary }}
-          <p><a href="{{ root_path }}/{{ article.url }}">Weiterlesen...</a></p>
+          <p><a href="{{ root_path }}/{{ article.url }}">Read more...</a></p>
         </div>
         {% if article.image %}
         <div class="column">
