--- a/templates/page.html
+++ b/templates/page.html
@@ -44,7 +44,7 @@
     <div class="hero-body">
       <div class="container">
         <h1 class="title">{{ page.title }}
-          <a href="https://github.com/semiversus/aestatic/tree/main/content/{{ page.path }}" class="sourcelink" title="Quelldatei"><span class="icon ml-3 is-size-5"><i class="icon-file-text2"></i></span></a>
+          <a href="https://github.com/semiversus/aestatic/tree/main/content/{{ page.path }}" class="sourcelink" title="{{ 'Sourcecode' if page.english else 'Quelldatei' }}"><span class="icon ml-3 is-size-5"><i class="icon-file-text2"></i></span></a>
         </h1>
       </div>
     </div>
@@ -69,7 +69,7 @@
 
   <footer class="footer is-small">
     <div class="content has-text-centered">
-      <p>Günther Jena 2011 - {{ env['timestamp'].year }} | Letztes Update am {{ env['timestamp'].strftime('%-d.%-m.%Y') }} (Rev. <a href="https://github.com/semiversus/aestatic/tree/{{ env['git_sha'] }}">{{ env['git_sha'][:7] }}</a>)</p>
+      <p>Günther Jena 2011 - {{ env['timestamp'].year }} | {{ 'Last update on' if page.english else 'Letztes Update am' }} {{ env['timestamp'].strftime('%-d.%-m.%Y') }} (Rev. <a href="https://github.com/semiversus/aestatic/tree/{{ env['git_sha'] }}">{{ env['git_sha'][:7] }}</a>)</p>
     </div>
   </footer>
   <script>
