--- a/templates/page.html
+++ b/templates/page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html language="{{ 'en' if page.english else 'de-AT' }}">
+<html lang="{{ 'en' if page.english else 'de-AT' }}">
   <head>
     <title>{{ page.title }}</title>
     <meta charset="utf-8">
