--- a/templates/page.html
+++ b/templates/page.html
@@ -11,7 +11,7 @@
     {% if page.latex %}<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>{% endif %}
   </head>
   <body>
-    <nav class="navbar is-info">
+    <nav class="navbar is-info is-hidden-print">
       <div class="container">
         <div class="navbar-brand">
           <a class="navbar-item is-size-5 has-text-weight-semibold" href="{{ root_path }}/index.html">SEMIVERSUS</a>
@@ -40,7 +40,7 @@
       </div>
     </nav>
 
-    <section class="hero is-info is-small">
+    <section class="hero is-info is-small is-hidden-print">
       <div class="hero-body">
         <div class="container">
           <h1 class="title">{{ page.title }}
@@ -53,9 +53,11 @@
     <section class="hero is-small">
       <div class="hero-body">
         <div class="container">
-          {% if page.parent %}<nav class="breadcrumb"><ul><li><a href="{{ root_path }}/{{page.parent[0].url}}"><span class="icon"><i class="icon-home"></i></span></a></li>{% for p in page.parent[1:] %}<li><a href="{{ root_path }}/{{p.url}}">{{p.title}}</a></li>{% endfor %}<li class="is-active has-text-weight-medium"><a href="#">{{ page.title }}</a></li></ul></nav>{% endif %}
+          <p class="is-print-only">URL: {{ root_path }}{{ page.url }}</p>
+          <h1 class="title is-print-only">{{ page.title }}</h1>
+          {% if page.parent %}<nav class="breadcrumb is-hidden-print"><ul><li><a href="{{ root_path }}/{{page.parent[0].url}}"><span class="icon"><i class="icon-home"></i></span></a></li>{% for p in page.parent[1:] %}<li><a href="{{ root_path }}/{{p.url}}">{{p.title}}</a></li>{% endfor %}<li class="is-active has-text-weight-medium"><a href="#">{{ page.title }}</a></li></ul></nav>{% endif %}
           {% if page.next or page.prev %}
-          <nav class="level">
+          <nav class="level is-hidden-print">
             <div class="level-left">{% if page.prev %}<div class="level-item"><a class="button is-link is-light is-small" href="{{ root_path}}/{{ page.prev.url }}"><span class="icon"><i class="icon-circle-left"></i></span><span>{{ page.prev.title }}</span></a></div>{% endif %}</div>
             {% if page.next %}<div class="level-right"><div class="level-item"><a class="button is-link is-light is-small" href="{{ root_path}}/{{ page.next.url }}"><span>{{ page.next.title }}</span><span class="icon"><i class="icon-circle-right"></i></span></a></div></div>{% endif %}
           </nav>
@@ -64,14 +66,16 @@
             {% block content %}{{ page.content }}{% endblock %}
           </div>
           {% if page.comments %}
-          <hr>
-          <section id="isso-thread" data-title="{{ page.path }}"></section>
-          {% endif %}
+          <div class="is-hidden-print">
+            <hr>
+            <section id="isso-thread" data-title="{{ page.path }}"></section>
+            {% endif %}
+          </div>
         </div>
       </div>
     </section>
 
-    <footer class="footer is-small">
+    <footer class="footer is-small is-hidden-print">
       <div class="content has-text-centered">
         <p>Günther Jena 2011 - {{ env['timestamp'].year }} | {{ 'Last update on' if page.english else 'Letztes Update am' }} {{ env['timestamp'].strftime('%-d.%-m.%Y') }} (Rev. <a href="https://github.com/semiversus/aestatic/tree/{{ env['git_sha'] }}">{{ env['git_sha'][:7] }}</a>)</p>
       </div>
