--- a/content/theme/css/semiversus.sass/semiversus.sass
+++ b/content/theme/css/semiversus.sass/semiversus.sass
@@ -7,6 +7,7 @@
 @import "utilities/_all"
 
 $body-size: 14px
+$body-line-height: normal
 $footer-padding: 0.5rem 1.5rem 0.5rem
 $content-table-cell-border-width: 1px
 $content-table-head-cell-border-width: 1px
