--- a/templates/slides.html
+++ b/templates/slides.html
@@ -14,7 +14,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h1>{{ page.title }}</h1>
+					<h1 class="r-stretch">{{ page.title }}</h1>
 					<p>Günther Jena</p>
 
 					<figure style="text-align: right;"><img src="{{ root_path }}/{{ page.url.parent }}/{{ page.url.stem }}_qr.png" style="width: 20%; height: 20%;">
@@ -28,7 +28,7 @@
 		<script src="{{ root_path }}/theme/js/reveal.js"></script>
 		<script src="{{ root_path }}/theme/js/reveal_notes.js"></script>
 		<script>
-			Reveal.initialize({plugins: [ RevealNotes ]});
+			Reveal.initialize({plugins: [ RevealNotes ], hash: true});
 		</script>
 	</body>
 </html>
