better source link

--- a/templates/page.html
+++ b/templates/page.html
@@ -44,7 +44,7 @@
       <div class="hero-body">
         <div class="container">
           <h1 class="title">{{ page.title }}
-            <a href="https://github.com/semiversus/aestatic/tree/main/content/{{ page.path }}" class="sourcelink" title="{{ 'Sourcecode' if page.english else 'Quelldatei' }}"><span class="icon ml-3 is-size-5"><i class="icon-file-text2"></i></span></a>
+            <a href="https://github.com/semiversus/aestatic/tree/main/content/{{ page.path }}?plain=1" class="sourcelink" title="{{ 'Sourcecode' if page.english else 'Quelldatei' }}"><span class="icon ml-3 is-size-5"><i class="icon-file-text2"></i></span></a>
           </h1>
         </div>
       </div>
