--- a/content/theme/css/semiversus.sass/semiversus.sass
+++ b/content/theme/css/semiversus.sass/semiversus.sass
@@ -1,7 +1,6 @@
 @charset "utf-8"
 /* bulma.io v0.9.4 | MIT License | github.com/jgthms/bulma */
 
-@import "icons"
 @import "print"
 
 @import "utilities/_all"
@@ -14,6 +13,7 @@ $content-table-head-cell-border-width: 1px
 $content-table-foot-cell-border-width: 1px
 $content-table-body-last-row-cell-border-bottom-width: 1px
 $border: $grey-dark
+$link-hover: $grey-dark
 
 $widescreen-enabled: false
 $fullhd-enabled: false
@@ -52,23 +52,25 @@ $desktop: 760px
         pre
             padding: 0
 
-.headerlink, .sourcelink
+.headerlink
     visibility: hidden
 
 h1:hover > a.headerlink, h2:hover > a.headerlink, h3:hover > a.headerlink, h4:hover > a.headerlink, h5:hover > a.headerlink, h6:hover > a.headerlink
     visibility: visible
 
-h1:hover > a.sourcelink
-    visibility: visible
-
-a.headerlink > span, a.sourcelink > span
+a.headerlink > span > span
     color: $grey-light
 
 a.headerlink > span:hover
     color: $link
 
-a.sourcelink > span:hover
-    color: $white
+a > span.icon
+    height: 1em
+    width: 1em
+
+a:not(:hover) > span.icon
+    filter: contrast(0%)
+    -webkit-filter: contrast(0%)
 
 html, body
     min-height: 100vh
