--- a/templates/page.html
+++ b/templates/page.html
@@ -43,9 +43,7 @@
     <section class="hero is-info is-small is-hidden-print">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title">{{ page.title }}
-            <a href="https://github.com/semiversus/aestatic/tree/main/content/{{ page.path }}?plain=1" class="sourcelink" title="{{ 'Sourcecode' if page.english else 'Quelldatei' }}"><span class="icon ml-3 is-size-5"><i class="icon-file-text2"></i></span></a>
-          </h1>
+          <h1 class="title">{{ page.title }}</h1>
         </div>
       </div>
     </section>
@@ -55,11 +53,11 @@
         <div class="container">
           <p class="is-print-only">URL: {{ root_path }}{{ page.url }}</p>
           <h1 class="title is-print-only">{{ page.title }}</h1>
-          {% if page.parent %}<nav class="breadcrumb is-hidden-print"><ul><li><a href="{{ root_path }}/{{page.parent[0].url}}"><span class="icon"><i class="icon-home"></i></span></a></li>{% for p in page.parent[1:] %}<li><a href="{{ root_path }}/{{p.url}}">{{p.title}}</a></li>{% endfor %}<li class="is-active has-text-weight-medium"><a href="#">{{ page.title }}</a></li></ul></nav>{% endif %}
+          {% if page.parent %}<nav class="breadcrumb is-hidden-print"><ul><li><a href="{{ root_path }}/{{page.parent[0].url}}"><span class="icon"><img src="{{ root_path }}//theme/img/home.svg"></span></a></li>{% for p in page.parent[1:] %}<li><a href="{{ root_path }}/{{p.url}}">{{p.title}}</a></li>{% endfor %}<li class="is-active has-text-weight-medium"><a href="#">{{ page.title }}</a></li></ul></nav>{% endif %}
           {% if page.next or page.prev %}
           <nav class="level is-hidden-print">
-            <div class="level-left">{% if page.prev %}<div class="level-item"><a class="button is-link is-light is-small" href="{{ root_path}}/{{ page.prev.url }}"><span class="icon"><i class="icon-circle-left"></i></span><span>{{ page.prev.title }}</span></a></div>{% endif %}</div>
-            {% if page.next %}<div class="level-right"><div class="level-item"><a class="button is-link is-light is-small" href="{{ root_path}}/{{ page.next.url }}"><span>{{ page.next.title }}</span><span class="icon"><i class="icon-circle-right"></i></span></a></div></div>{% endif %}
+            <div class="level-left">{% if page.prev %}<div class="level-item"><a class="button is-link is-light is-small" href="{{ root_path}}/{{ page.prev.url }}"><span class="icon"><img src="{{ root_path}}/theme/img/circle-left.svg"></span> <span>{{ page.prev.title }}</span></a></div>{% endif %}</div>
+            {% if page.next %}<div class="level-right"><div class="level-item"><a class="button is-link is-light is-small" href="{{ root_path}}/{{ page.next.url }}"><span>{{ page.next.title }}</span> <span class="icon is-small"><img src="{{ root_path}}/theme/img/circle-right.svg"></span></a></div></div>{% endif %}
           </nav>
           {% endif %}
           <div class="content">
@@ -77,7 +75,7 @@
 
     <footer class="footer is-small is-hidden-print">
       <div class="content has-text-centered">
-        <p>Günther Jena 2011 - {{ env['timestamp'].year }} | {{ 'Last update on' if page.english else 'Letztes Update am' }} {{ env['timestamp'].strftime('%-d.%-m.%Y') }} (Rev. <a href="https://github.com/semiversus/aestatic/commit/{{ env['git_sha'] }}">{{ env['git_sha'][:7] }}</a>)</p>
+        <p>Günther Jena 2011 - {{ env['timestamp'].year }} | {{ 'Last update on' if page.english else 'Letztes Update am' }} {{ env['timestamp'].strftime('%-d.%-m.%Y') }} (Rev. <a href="https://github.com/semiversus/aestatic/commit/{{ env['git_sha'] }}">{{ env['git_sha'][:7] }}</a>, <a href="https://github.com/semiversus/aestatic/blob/main/content/{{ page.path }}?plain=1" title="{{ 'Sourcecode of this page' if page.english else 'Quelldatei dieser Seite' }}">{{ 'Sourcecode' if page.english else 'Quelldatei' }}</a>)</p>
       </div>
     </footer>
     <script>
