fixed draft rendering

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
   {{ page.content }}
 
-  {% for article in env['articles'] if page.english == article.english and article.draft != True %}
+  {% for article in env['articles'] if page.english == article.english %}
     <div class="box mb-5">
       <p class="title is-4"><a href="{{ root_path }}/{{ article.url }}">{{ article.title }}</a></p>
       <div class="columns">
