--- a/templates/slides.html
+++ b/templates/slides.html
@@ -15,7 +15,7 @@
 			<div class="slides">
 				<section>
 					<h1 class="r-stretch">{{ page.title }}</h1>
-					<p>Günther Jena</p>
+					<p>{{ page.author }}</p>
 
 					<figure style="text-align: right;"><img src="{{ root_path }}/{{ page.url.parent }}/{{ page.url.stem }}_qr.png" style="width: 20%; height: 20%;">
 						<figcaption>https://semiversus.com/{{ page.url }}</figcaption>
