--- a/templates/page.html
+++ b/templates/page.html
@@ -53,11 +53,11 @@
         <div class="container">
           <p class="is-print-only">URL: {{ root_path }}{{ page.url }}</p>
           <h1 class="title is-print-only">{{ page.title }}</h1>
-          {% if page.parent %}<nav class="breadcrumb is-hidden-print"><ul><li><a href="{{ root_path }}/{{page.parent[0].url}}"><span class="icon"><img src="{{ root_path }}//theme/img/home.svg"></span></a></li>{% for p in page.parent[1:] %}<li><a href="{{ root_path }}/{{p.url}}">{{p.title}}</a></li>{% endfor %}<li class="is-active has-text-weight-medium"><a href="#">{{ page.title }}</a></li></ul></nav>{% endif %}
+          {% if page.parent %}<nav class="breadcrumb is-hidden-print"><ul><li><a href="{{ root_path }}/{{page.parent[0].url}}"><span class="icon"><img src="{{ root_path }}//theme/img/home.svg" alt=""home symbol"></span></a></li>{% for p in page.parent[1:] %}<li><a href="{{ root_path }}/{{p.url}}">{{p.title}}</a></li>{% endfor %}<li class="is-active has-text-weight-medium"><a href="#">{{ page.title }}</a></li></ul></nav>{% endif %}
           {% if page.next or page.prev %}
           <nav class="level is-hidden-print">
-            <div class="level-left">{% if page.prev %}<div class="level-item"><a class="button is-link is-light is-small" href="{{ root_path}}/{{ page.prev.url }}"><span class="icon"><img src="{{ root_path}}/theme/img/circle-left.svg"></span> <span>{{ page.prev.title }}</span></a></div>{% endif %}</div>
-            {% if page.next %}<div class="level-right"><div class="level-item"><a class="button is-link is-light is-small" href="{{ root_path}}/{{ page.next.url }}"><span>{{ page.next.title }}</span> <span class="icon is-small"><img src="{{ root_path}}/theme/img/circle-right.svg"></span></a></div></div>{% endif %}
+            <div class="level-left">{% if page.prev %}<div class="level-item"><a class="button is-link is-light is-small" href="{{ root_path}}/{{ page.prev.url }}"><span class="icon"><img src="{{ root_path}}/theme/img/circle-left.svg" alt="left symbol"></span> <span>{{ page.prev.title }}</span></a></div>{% endif %}</div>
+            {% if page.next %}<div class="level-right"><div class="level-item"><a class="button is-link is-light is-small" href="{{ root_path}}/{{ page.next.url }}"><span>{{ page.next.title }}</span> <span class="icon is-small"><img src="{{ root_path}}/theme/img/circle-right.svg" alt="right symbol"></span></a></div></div>{% endif %}
           </nav>
           {% endif %}
           <div class="content">
