make isso-thread a <div>

--- a/templates/page.html
+++ b/templates/page.html
@@ -66,7 +66,7 @@
           {% if page.comments %}
           <div class="is-hidden-print">
             <hr>
-            <section id="isso-thread" data-title="{{ page.path }}"></section>
+            <div id="isso-thread" data-title="{{ page.path }}"></div>
             {% endif %}
           </div>
         </div>
