--- a/content/theme/css/semiversus.sass/semiversus.sass
+++ b/content/theme/css/semiversus.sass/semiversus.sass
@@ -64,11 +64,11 @@ a.headerlink > span > span
 a.headerlink > span:hover
     color: $link
 
-a > span.icon
+a > svg.icon
     height: 0.75em
     width: 0.75em
 
-a:not(:hover) > span.icon
+a:not(:hover) > svg.icon
     filter: contrast(0%)
     -webkit-filter: contrast(0%)
 
