--- a/templates/page.html
+++ b/templates/page.html
@@ -8,7 +8,7 @@
     <meta name="google-site-verification" content="O-3LVEziPiVrCYqFCwbLmB3s7lNG__cPMLLAr_RUxbA">
     <link rel="stylesheet" href="{{ root_path }}/theme/css/semiversus.{{ env['git_sha'][:7] }}.css">
     <link rel="icon" href="{{ root_path }}/favicon.ico">
-    {% if page.latex %}<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>{% endif %}
+    {% if page.latex %}<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>{% endif %}
   </head>
   <body>
     <nav class="navbar is-info is-hidden-print">
@@ -53,7 +53,7 @@
         <div class="container">
           <p class="is-print-only">URL: {{ root_path }}{{ page.url }}</p>
           <h1 class="title is-print-only">{{ page.title }}</h1>
-          {% if page.parent %}<nav class="breadcrumb is-hidden-print"><ul><li><a href="{{ root_path }}/{{page.parent[0].url}}"><span class="icon"><img src="{{ root_path }}//theme/img/home.svg" alt=""home symbol"></span></a></li>{% for p in page.parent[1:] %}<li><a href="{{ root_path }}/{{p.url}}">{{p.title}}</a></li>{% endfor %}<li class="is-active has-text-weight-medium"><a href="#">{{ page.title }}</a></li></ul></nav>{% endif %}
+          {% if page.parent %}<nav class="breadcrumb is-hidden-print"><ul><li><a href="{{ root_path }}/{{page.parent[0].url}}"><span class="icon"><img src="{{ root_path }}//theme/img/home.svg" alt="home symbol"></span></a></li>{% for p in page.parent[1:] %}<li><a href="{{ root_path }}/{{p.url}}">{{p.title}}</a></li>{% endfor %}<li class="is-active has-text-weight-medium"><a href="#">{{ page.title }}</a></li></ul></nav>{% endif %}
           {% if page.next or page.prev %}
           <nav class="level is-hidden-print">
             <div class="level-left">{% if page.prev %}<div class="level-item"><a class="button is-link is-light is-small" href="{{ root_path}}/{{ page.prev.url }}"><span class="icon"><img src="{{ root_path}}/theme/img/circle-left.svg" alt="left symbol"></span> <span>{{ page.prev.title }}</span></a></div>{% endif %}</div>
