finished wdi slides

--- a/templates/slides.html
+++ b/templates/slides.html
@@ -28,7 +28,7 @@
 		<script src="{{ root_path }}/theme/js/reveal.js"></script>
 		<script src="{{ root_path }}/theme/js/reveal_notes.js"></script>
 		<script>
-			Reveal.initialize({plugins: [ RevealNotes ], hash: true});
+			Reveal.initialize({plugins: [ RevealNotes ], hash: true, fragments: false});
 		</script>
 	</body>
 </html>
