--- a/content/theme/css/semiversus.sass/semiversus.sass
+++ b/content/theme/css/semiversus.sass/semiversus.sass
@@ -13,7 +13,7 @@ $content-table-head-cell-border-width: 1px
 $content-table-foot-cell-border-width: 1px
 $content-table-body-last-row-cell-border-bottom-width: 1px
 $border: $grey-dark
-$link-hover: $grey-dark
+$link-hover: $blue
 
 $widescreen-enabled: false
 $fullhd-enabled: false
